--- a/src/pages/Auth/SignIn/SignIn.module.css
+++ b/src/pages/Auth/SignIn/SignIn.module.css
@@ -181,6 +181,9 @@
     max-width: 1440px;
     display: flex;
     justify-content: center;
+    overflow: hidden;
+    padding-top: 0;
+    padding-bottom: 0;
   }
   .containerImg {
     max-width: 592px;
